[gd_scene load_steps=4 format=3 uid="uid://40noxf1asr7y"]

[ext_resource type="Script" path="res://bit.gd" id="1_wpypm"]
[ext_resource type="Texture2D" uid="uid://b1klxgh4exu1q" path="res://images/circle.png" id="2_b37pm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_boolp"]
radius = 15.0

[node name="Bit" type="Node2D"]
script = ExtResource("1_wpypm")

[node name="Sprite" type="Sprite2D" parent="."]
self_modulate = Color(0.9, 0.9, 0.9, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_b37pm")

[node name="Area" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_boolp")
one_way_collision_margin = 10.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_area_area_exited"]
[connection signal="input_event" from="Area" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
